--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,19 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+demo
+
+*.tsbuildinfo
+
+# env files
+.env
+.env.local
+.env.*.local
+
+# Vite
+vite.config.ts.timestamp-*
+vite.config.js.timestamp-*
+
+# ESLint cache
+.eslintcache
