--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -7,13 +7,15 @@
     "module": "ESNext",
     "types": ["vite/client", "chrome"],
     "skipLibCheck": true,
+    "composite": true,
+    "emitDeclarationOnly": true,
+    "declarationDir": "./node_modules/.tmp/declarations/app",
 
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "verbatimModuleSyntax": true,
     "moduleDetection": "force",
-    "noEmit": true,
     "jsx": "react-jsx",
 
     /* Linting */
