--- a/manifest.json
+++ b/manifest.json
@@ -1,29 +1,20 @@
 {
   "manifest_version": 3,
-  "name": "FlowState",
+  "name": "Pathfinder",
   "version": "0.1.0",
-  "description": "AI-powered accessibility assistant that helps users understand complex web pages",
-  "permissions": ["activeTab", "scripting", "storage"],
+  "permissions": ["storage", "activeTab", "scripting"],
   "host_permissions": ["<all_urls>"],
   "action": {
-    "default_title": "Toggle FlowState Sidebar"
+    "default_popup": "index.html"
   },
-  "content_scripts": [
-    {
-      "matches": ["<all_urls>"],
-      "js": ["src/content.ts"],
-      "run_at": "document_idle",
-      "all_frames": false
-    }
-  ],
   "background": {
     "service_worker": "src/background.ts",
     "type": "module"
   },
-  "web_accessible_resources": [
+  "content_scripts": [
     {
-      "resources": ["dist/*"],
-      "matches": ["<all_urls>"]
+      "matches": ["<all_urls>"],
+      "js": ["src/content.ts"]
     }
   ]
 }
